--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
+    "react-dnd": "^7.4.3",
+    "react-dnd-html5-backend": "^7.4.0",
+    "react-dnd-multi-backend": "^3.1.11",
+    "react-dnd-preview": "^3.1.11",
+    "react-dnd-touch-backend": "^0.8.1",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "semantic-ui-react": "^0.86.0"
   },
   "scripts": {
     "start": "react-scripts start",
